syntax = "proto3";

option java_multiple_files = true;

service SaleService {
  rpc sales (SaleRequestDto) returns (SaleResponse) {}
}

message SaleRequestDto {
  string startDateTime = 1;
  string endDateTime = 2;
}

message SaleResponse {
  repeated Sale sales = 1;
}

message Sale {
  string datetime = 1;
  double sales = 2;
  int32 points = 3;
}